--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>JR東西線列車走行位置(尼崎～鴨野)</title>
+<title>JR東西線列車走行位置(尼崎～鴫野)</title>
 
 <style>
   body {
@@ -456,3 +456,4 @@ setInterval(update, 30000);
 </script>
 </body>
 </html>
+
